--- a/_includes/image.html
+++ b/_includes/image.html
@@ -3,8 +3,8 @@
         <img style="float: left;padding-right: 20px" src="../images/pavel_256_256.jpg">
     </div>
     <div>
-        <p>I'm a Lead Software Engineer with nine years of experience in software development, DevOps, and automation testing.</p>
-        <p>Includes experience in architecting new services, leading engineering teams, hiring, and mentoring.</p>
+        <p>I'm a Lead Software Engineer with ten years of experience combined in software architecture, software development, development operations and automation testing.</p>
+        <p>Have experience in entertainment, finance, real estate industries.</p>
         <p>Certified Scrum Master and Google Data Engineer.</p>
         <p>Contact me using the information below.</p>
     </div>
