Fancy svg icons for like/dislike buttons

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,6 @@
 <div>
     <div class="image">
-        <img style="float: left;padding-right: 20px" src="../images/pavel_256_256.jpg">
+        <img style="float: left;padding-right: 20px" src="{{ site.url }}/assets/images/pavel_256_256.jpg">
     </div>
     <div>
         <p>I'm a Lead Software Engineer with ten years of experience combined in software architecture, software development, development operations and automation testing.</p>
