--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -149,7 +149,5 @@ layout: default
     }
 </script>
 <p>-------------------------------------</p>
-<button type="button" class="btn btn-default" onclick="like()">Liked</button><span>  </span><span id="likeCount"></span>
-<button type="button" class="btn btn-default" onclick="dislike()">Dislike</button><span>  </span><span id="dislikeCount"></span>
-
-
+<input type="image" src="{{ site.url }}/assets/icon/like-res.svg" onclick="like()"><span>  </span><span id="likeCount"></span>
+<input type="image" src="{{ site.url }}/assets/icon/dislike-res.svg" onclick="dislike()"><span>  </span><span id="dislikeCount"></span>
