Unlike when liked, undislike when liked

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,6 +63,9 @@ layout: default
                 }
             });
             localStorage.setItem("likeCountPressed", "1");
+            if (localStorage.getItem("dislikeCountPressed") === "1") {
+                unDislike()
+            }
         }
     }
 
@@ -119,6 +122,9 @@ layout: default
                 }
             });
             localStorage.setItem("dislikeCountPressed", "1");
+            if (localStorage.getItem("likeCountPressed") === "1") {
+                unLike()
+            }
         }
     }
 
