--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,24 +16,49 @@ layout: default
 <script type="text/javascript">
     // FirebaseUI config.
     var uiConfig = {
-        signInSuccessUrl: 'https://pavelsusloparov.com/',
+        callbacks: {
+            signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+                // User successfully signed in.
+                console.log("sign in success");
+                // don't redirect automatically
+                return false;
+            }
+        },
+        signInSuccessUrl: '/',
         signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
             firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+            firebase.auth.EmailAuthProvider.PROVIDER_ID
         ],
         // tosUrl and privacyPolicyUrl accept either url string or a callback
         // function.
         // Terms of service url/callback.
-        tosUrl: 'https://pavelsusloparov.com/about/',
+        tosUrl: '/',
         // Privacy policy url/callback.
         privacyPolicyUrl: function() {
-            window.location.assign('https://pavelsusloparov.com/about/');
+            window.location.assign('/');
         }
     };
 
+    firebase.auth().onAuthStateChanged(function (user) {
+        if (user) {
+            user.getIdToken().then(function (accessToken) {
+                console.log("token retrieved: "+accessToken);
+                // Send token to your backend via HTTPS
+                var xhr = new XMLHttpRequest();
+                xhr.open('POST', '/');
+                xhr.setRequestHeader('Content-Type', "application/x-www-form-urlencoded");
+                xhr.onload = function() {
+                    console.log('Signed in as: ' + xhr.responseText);
+                    document.getElementById('firebaseui-auth-container').hidden = true;
+                };
+                xhr.send('token=' + accessToken);
+            });
+        }
+    });
+
     // Initialize the FirebaseUI Widget using Firebase.
     var ui = new firebaseui.auth.AuthUI(firebase.auth());
-    // The start method will wait until the DOM is loaded.
     ui.start('#firebaseui-auth-container', uiConfig);
 </script>
 
@@ -187,5 +212,8 @@ layout: default
 </script>
 <div class="line"></div>
 <div id="firebaseui-auth-container"></div>
+<div id="sign-in-status"></div>
+<div id="sign-in"></div>
+<pre id="account-details"></pre>
 <input id="my-like-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/like-res.svg" onclick="like()"><span id="my-like-btn-count" class="attitude-count"><span id="likeCount"></span></span>
 <input id="my-dislike-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/dislike-res.svg" onclick="dislike()"><span id="my-dislike-btn-count" class="attitude-count"><span id="dislikeCount"></span></span>
