--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -210,10 +210,7 @@ layout: default
         document.getElementById("my-dislike-btn").src = "{{ site.url }}/assets/icon/dislike-res.svg";
     }
 </script>
-<div class="line"></div>
-<div id="firebaseui-auth-container"></div>
-<div id="sign-in-status"></div>
-<div id="sign-in"></div>
-<pre id="account-details"></pre>
-<input id="my-like-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/like-res.svg" onclick="like()"><span id="my-like-btn-count" class="attitude-count"><span id="likeCount"></span></span>
-<input id="my-dislike-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/dislike-res.svg" onclick="dislike()"><span id="my-dislike-btn-count" class="attitude-count"><span id="dislikeCount"></span></span>
+<!--<div class="line"></div>-->
+<!--<div id="firebaseui-auth-container"></div>-->
+<!--<input id="my-like-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/like-res.svg" onclick="like()"><span id="my-like-btn-count" class="attitude-count"><span id="likeCount"></span></span>-->
+<!--<input id="my-dislike-btn" class="attitude-btn" type="image" src="{{ site.url }}/assets/icon/dislike-res.svg" onclick="dislike()"><span id="my-dislike-btn-count" class="attitude-count"><span id="dislikeCount"></span></span>-->
